# pomp-x86_64

./: LICENSE  README.md
reverse-from-coredump/: .gitignore  Makefile.am  README  configure.ac
reverse-from-coredump/include/: access_memory.h  common.h  disassemble.h  elf_binary.h  elf_core.h  global.h  heuristics.h  inst_data.h  inst_opd.h  insthandler.h  re_stackpointer.h  reverse_exe.h  reverse_log.h  thread_selection.h
reverse-from-coredump/src/: Makefile.am  access_memory.c  alias_manager.c  common.c  disassemble.c  global.c  handler_comparison.c  handler_controlflow.c  handler_other.c  handler_sse.c  instruction_resolver.c  process_binary.c  process_core.c  process_inst_data.c  process_thread.c  re_dsmanager.c  re_insttable.c  re_opdvalue.c  re_stack_pointer.c  reverse_execution.c  reverse_instructions.c  reverse_log.c  utils.c
